--- a/src/blocks/header/__nav/_main/header__nav_main.css
+++ b/src/blocks/header/__nav/_main/header__nav_main.css
@@ -1,3 +1,9 @@
 .header__nav_main {
     column-gap: 30px;
 }
+
+@media (max-width: 1030px) {
+    .header__nav_main {
+        column-gap: 15px;
+    }
+}
