--- a/src/blocks/logo/logo.css
+++ b/src/blocks/logo/logo.css
@@ -2,3 +2,10 @@
     width: 70px;
     height: 70px;
 }
+
+@media (max-width: 1030px) {
+    .logo{
+        width: 60px;
+        height: 60px;
+    }
+}
