--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,12 +11,18 @@
 @import url(../blocks/header/__nav/_main/header__nav_main.css);
 @import url(../blocks/header/__nav/_cart-number/header__nav_cart-number.css);
 @import url(../blocks/header/__nav/_cart-number-text/header__nav_cart-number-text.css);
+@import url(../blocks/header/__nav/_invisible/header__nav_invisible.css);
+@import url(../blocks/header/__nav/_visible/header__nav_visible.css);
+@import url(../blocks/header/__nav/_mobile/header__nav_mobile.css);
+@import url(../blocks/header/__nav/_list-mobile/header__nav_list-mobile.css);
+@import url(../blocks/header/__nav/_menu/header__nav_menu.css);
 @import url(../blocks/header/__menu/header__menu.css);
 @import url(../blocks/header/__menu/_container/header__menu_container.css);
 @import url(../blocks/header/__menu/_search/header__menu_search.css);
 
 @import url(../blocks/header/__main/header__main.css);
 @import url(../blocks/header/__main/_icon/header__main_icon.css);
+@import url(../blocks/header/__main/_burger/header__main_burger.css);
 
 @import url(../blocks/search/search.css);
 @import url(../blocks/logo/logo.css);
