--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -5,4 +5,5 @@
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     position: relative;
     height: 100%;
+    background-color: antiquewhite;
 }
