--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,9 +1,9 @@
 .page {
     background-color: white;
     max-width: 1920px;
+    width: 100%;
     margin: 0 auto;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     position: relative;
     height: 100%;
-    background-color: antiquewhite;
 }
