--- a/src/blocks/firstscreen/__main/_subtitle/firstscreen__main_subtitle.css
+++ b/src/blocks/firstscreen/__main/_subtitle/firstscreen__main_subtitle.css
@@ -1,10 +1,17 @@
 .firstscreen__main_subtitle {
     margin: 0 0 15px;
-
     color: var(--Unnamed-Color, #838383);
     font-family: 'Roboto';
     font-size: 18px;
     font-style: normal;
     font-weight: 300;
     line-height: 133.687%;
+}
+
+
+@media (max-width: 1270px) {
+    .firstscreen__main_subtitle {
+        font-size: 15px;
+        margin: 0 0 5px;
+    }
 }
