--- a/src/blocks/firstscreen/__main/_title/firstscreen__main_title.css
+++ b/src/blocks/firstscreen/__main/_title/firstscreen__main_title.css
@@ -8,3 +8,11 @@
     font-weight: 400;
     line-height: normal;
 }
+
+
+@media (max-width: 1270px) {
+    .firstscreen__main_title {
+        font-size: 30px;
+        margin: 0 0 28px;
+    }
+}
