--- a/src/blocks/firstscreen/__main/_scroll-container/firstscreen__main_scroll-container.css
+++ b/src/blocks/firstscreen/__main/_scroll-container/firstscreen__main_scroll-container.css
@@ -8,3 +8,10 @@
     gap: 16.5px;
     align-items: center;
 }
+
+@media (max-width: 1610px) {
+    .firstscreen__main_scroll-container {
+        /* padding: 100px 0 158px 15px; */
+        display: none;
+    }
+}
