--- a/src/blocks/firstscreen/__offer/firstscreen__offer.css
+++ b/src/blocks/firstscreen/__offer/firstscreen__offer.css
@@ -10,3 +10,19 @@
     padding-left: 40px;
     gap: 82px;
 }
+
+@media (max-width: 1610px) {
+    .firstscreen__offer  {
+        background-image: url('../../../images/firstscreenmobsvg.svg');
+        max-width: 1610px;
+        width: 100%;
+        background-position: right;
+        /* display: flex; */
+        /* align-items: center; */
+        padding: 0;
+        max-width: 375px;
+        width: 100%;
+        height: 196px;
+        /* justify-content: center; */
+    }
+}
