--- a/src/blocks/firstscreen/firstscreen.css
+++ b/src/blocks/firstscreen/firstscreen.css
@@ -4,5 +4,10 @@
     width: 100%;
     height: 683px;
     display: flex;
-   
+}
+
+@media (max-width: 1610px) {
+    .firstscreen {
+        flex-direction: column;
+    }
 }
