--- a/src/blocks/firstscreen/__offer/firstscreen__offer.css
+++ b/src/blocks/firstscreen/__offer/firstscreen__offer.css
@@ -16,13 +16,23 @@
         background-image: url('../../../images/firstscreenmobsvg.svg');
         max-width: 1610px;
         width: 100%;
+        background-position: center;
+        padding: 0;
+        max-width: 1610px;
+        width: 100%;
+        height: 196px;
+    }
+}
+
+@media (max-width: 1270px) {
+    .firstscreen__offer  {
+        background-image: url('../../../images/firstscreenmobsvg.svg');
+        max-width: 1610px;
+        width: 100%;
         background-position: right;
-        /* display: flex; */
-        /* align-items: center; */
         padding: 0;
         max-width: 375px;
         width: 100%;
         height: 196px;
-        /* justify-content: center; */
     }
 }
