--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,6 +24,7 @@
 @import url(../blocks/header/__main/_icon/header__main_icon.css);
 @import url(../blocks/header/__main/_burger/header__main_burger.css);
 @import url(../blocks/header/__main/_name/header__main_name.css);
+@import url(../blocks/header/__main/_main-mobile/header__main_name-mobile.css);
 
 @import url(../blocks/header/__profile-menu/header__profile-menu.css);
 @import url(../blocks/header/__profile-menu/_user/header__profile-menu_user.css);
