--- a/src/blocks/firstscreen/firstscreen.css
+++ b/src/blocks/firstscreen/firstscreen.css
@@ -4,11 +4,13 @@
     width: 100%;
     height: 683px;
     display: flex;
+    margin-bottom: 164px;
 }
 
 @media (max-width: 1610px) {
     .firstscreen {
         flex-direction: column;
         height: 789px;
+        margin-bottom: 120px;
     }
 }
