added mobile v advantages block

--- a/src/blocks/advantages/__element/_img/advantages__element_img.css
+++ b/src/blocks/advantages/__element/_img/advantages__element_img.css
@@ -2,3 +2,10 @@
     width: 36.109px;
     height: 36.109px;
 }
+
+@media (max-width: 610px) {
+    .advantages__element_img {
+        width: 31px;
+        height: 31px;
+    }
+}
