--- a/src/blocks/advantages/__element/_subtitle/advantages__element_subtitle.css
+++ b/src/blocks/advantages/__element/_subtitle/advantages__element_subtitle.css
@@ -7,3 +7,9 @@
     line-height: normal;
     margin: 0;
 }
+
+/* @media (max-width: 610px) {
+    .advantages__element_subtitle {
+        font-size: 18px;
+    }
+} */
