--- a/src/blocks/advantages/__element/_icon/advantages__element_icon.css
+++ b/src/blocks/advantages/__element/_icon/advantages__element_icon.css
@@ -8,3 +8,12 @@
     justify-content: center;
     margin-bottom: 25px;
 }
+
+@media (max-width: 610px) {
+    .advantages__element_icon {
+        width: 50px;
+        height: 50px;
+        border-radius: 9px;
+        margin-bottom: 15px;
+    }
+}
