--- a/src/blocks/advantages/__items/advantages__items.css
+++ b/src/blocks/advantages/__items/advantages__items.css
@@ -5,3 +5,9 @@
     gap: 27px;
     justify-content: center;
 }
+
+@media (max-width: 610px) {
+    .advantages__items {
+        grid-auto-rows: 221px;
+    }
+}
