--- a/src/blocks/advantages/__text/_subtitle/advantages__text_subtitle.css
+++ b/src/blocks/advantages/__text/_subtitle/advantages__text_subtitle.css
@@ -7,3 +7,11 @@
     line-height: 150%; 
     margin: 0 0 41px 0;
 }
+
+@media (max-width: 610px) {
+    .advantages__text_subtitle {
+        font-size: 15px;
+        margin: 0 0 30px 0;
+        width: 336px;
+    }
+}
