--- a/src/blocks/advantages/__text/_title/advantages__text_title.css
+++ b/src/blocks/advantages/__text/_title/advantages__text_title.css
@@ -7,3 +7,10 @@
     line-height: 50px; 
     margin: 0 0 37px 0;
 }
+
+@media (max-width: 610px) {
+    .advantages__text_title {
+        font-size: 30px;
+        margin: 0 0 20px 0;
+    }
+}
