--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,6 +51,7 @@
 @import url(../blocks/firstscreen/__main/_title/firstscreen__main_title.css);
 @import url(../blocks/firstscreen/__more-details/firstscreen__more-details.css);
 @import url(../blocks/firstscreen/__more-details/_button/firstscreen__more-details_button.css);
+@import url(../blocks/firstscreen/__more-details/_text/firstscreen__more-details_text.css);
 
 
 @import url(../blocks/firstscreen/__swiper/firstscreen__swiper.css);
