fixed element size in advantagec block

--- a/src/blocks/advantages/__items/advantages__items.css
+++ b/src/blocks/advantages/__items/advantages__items.css
@@ -8,6 +8,7 @@
 
 @media (max-width: 610px) {
     .advantages__items {
-        grid-auto-rows: 221px;
+        grid-auto-rows: 214px;
+        gap: 17px;
     }
 }
