--- a/src/blocks/firstscreen/__more-details/_button/firstscreen__more-details_button.css
+++ b/src/blocks/firstscreen/__more-details/_button/firstscreen__more-details_button.css
@@ -14,3 +14,10 @@
 .firstscreen__more-details_button:hover {
     opacity: 0.7;
 }
+
+@media (max-width: 610px) {
+    .firstscreen__more-details_button {
+        width: 45px;
+        height: 45px;
+    }
+}
