--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-    background-color: white;
+    background-color: rgba(252, 252, 252, 1);
     max-width: 1920px;
     width: 100%;
     margin: 0 auto;
