fixed element size and button position

--- a/src/blocks/news/__element/_el/news__element_el.css
+++ b/src/blocks/news/__element/_el/news__element_el.css
@@ -1,7 +1,7 @@
 .news__element_el {
     position: absolute;
     z-index: 2;
-    top: 205px;
+    top: 247px;
     right: 10px;
-    width: 97px;
+    /* width: 97px; */
 }
