--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -118,3 +118,4 @@
 @import url(../blocks/news/__element/_date/news__element_date.css);
 @import url(../blocks/news/__element/_number/news__element_number.css);
 @import url(../blocks/news/__element/_month/news__element_month.css);
+@import url(../blocks/news/__button/news__button.css);
