--- a/src/blocks/news/__element/_img/news__element_img.css
+++ b/src/blocks/news/__element/_img/news__element_img.css
@@ -1,7 +1,14 @@
 .news__element_img {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     z-index: -1;
     border-top-left-radius: 50px;
+}
+
+@media (max-width: 610px) {
+    .news__element_img {
+        width: 324px;
+        height: 205px;
+    }
 }
