--- a/src/blocks/news/__element/_month/news__element_month.css
+++ b/src/blocks/news/__element/_month/news__element_month.css
@@ -7,3 +7,16 @@
     font-weight: 300;
     line-height: normal;
 }
+
+
+
+@media (max-width: 610px) {
+    .news__element_month {
+        color: #292D32;
+        font-family: 'Roboto';
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 71.687%;
+    }
+}
