--- a/src/blocks/news/news.css
+++ b/src/blocks/news/news.css
@@ -4,4 +4,20 @@
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 180px;
+}
+
+@media (max-width: 1460px) {
+    .news {
+        height: 1400px;
+    }
+}
+
+@media (max-width: 610px) {
+    .news {
+        height: 1243px;
+        padding: 0 15px;
+        width: calc(100% - 30px);
+        margin-bottom: 120px;
+    }
 }
