--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -119,3 +119,4 @@
 @import url(../blocks/news/__element/_number/news__element_number.css);
 @import url(../blocks/news/__element/_month/news__element_month.css);
 @import url(../blocks/news/__button/news__button.css);
+@import url(../blocks/news/__element/_invisible/news__element_invisible.css);
