--- a/src/blocks/news/__container/news__container.css
+++ b/src/blocks/news/__container/news__container.css
@@ -3,3 +3,11 @@
     justify-content: space-between;
     margin: 0 0 69px 0;
 }
+
+
+@media (max-width: 610px) {
+    .news__container {
+        flex-direction: column;
+        margin: 0 0 39px 0;
+    }
+}
