--- a/src/blocks/news/__element/_subtitle/news__element_subtitle.css
+++ b/src/blocks/news/__element/_subtitle/news__element_subtitle.css
@@ -9,3 +9,9 @@
     font-weight: 400;
     line-height: 150%; 
 }
+
+@media (max-width: 610px) {
+    .news__element_subtitle {
+        font-size: 14px;
+    }
+}
