--- a/src/blocks/news/__element/news__element.css
+++ b/src/blocks/news/__element/news__element.css
@@ -9,4 +9,14 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    /* background-color: white; */
+}
+
+
+@media (max-width: 610px) {
+    .news__element {
+        background-image: url('../../../images/lecalo.svg');
+        padding: 0 20px 20px 20px;
+        box-sizing: border-box;
+    }
 }
