--- a/src/blocks/news/__text/_title/news__text_title.css
+++ b/src/blocks/news/__text/_title/news__text_title.css
@@ -7,3 +7,10 @@
     line-height: normal;
     margin: 0 0 25px 0;
 }
+
+@media (max-width: 610px) {
+    .news__text_title {
+        font-size: 30px;
+        margin: 0 0 20px 0;
+    }
+}
