--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -137,3 +137,12 @@
 @import url(../blocks/info/__contacts/_box/info__contacts_box.css);
 @import url(../blocks/info/__contacts/_icon/info__contacts_icon.css);
 @import url(../blocks/info/__contacts/_social-network/info__contacts_social-network.css);
+@import url(../blocks/info/__application/_subtitle/info__application_subtitle.css);
+@import url(../blocks/info/__application/_title/info__application_title.css);
+@import url(../blocks/info/__application/_input-container/info__application_input-container.css);
+@import url(../blocks/info/__application/_input/info__application_input.css);
+@import url(../blocks/info/__application/_label/info__application_label.css);
+@import url(../blocks/info/__application/_form/info__application_form.css);
+@import url(../blocks/info/__application/_comment-input/info__application_comment-input.css);
+@import url(../blocks/info/__application/_button/info__application_button.css);
+@import url(../blocks/info/__iphone/info__iphone.css);
