--- a/src/blocks/info/__application/_label/info__application_label.css
+++ b/src/blocks/info/__application/_label/info__application_label.css
@@ -11,3 +11,10 @@
     background-color: #292D32;
     padding: 0 10px;
 }
+
+@media (max-width: 610px) {
+    .info__application_label {
+        font-size: 15px;
+        padding: 0 7px;
+    }
+}
