--- a/src/blocks/info/__contacts/_social-network/info__contacts_social-network.css
+++ b/src/blocks/info/__contacts/_social-network/info__contacts_social-network.css
@@ -2,3 +2,10 @@
     width: 93.7px;
     height: 37.7px;
 }
+
+@media (max-width: 610px) {
+    .info__contacts_social-network {
+        width: 65px;
+        height: 26px;    
+    }
+}
