--- a/src/blocks/info/__application/_comment-input/info__application_comment-input.css
+++ b/src/blocks/info/__application/_comment-input/info__application_comment-input.css
@@ -1,3 +1,9 @@
 .info__application_comment-input {
     height: 145.25px;
 }
+
+@media (max-width: 610px) {
+    .info__application_comment-input {
+        height: 80px;
+    }
+}
