--- a/src/blocks/info/__application/_subtitle/info__application_subtitle.css
+++ b/src/blocks/info/__application/_subtitle/info__application_subtitle.css
@@ -5,5 +5,13 @@
     font-style: normal;
     font-weight: 400;
     line-height: 150%; /* 24px */
-    margin: 0 0 48px 0;
+    margin: 0 0 65.75px 0;
+}
+
+@media (max-width: 610px) {
+    .info__application_subtitle {
+        font-size: 15px;
+        margin: 0 0 50px 0;
+        width: 319px;
+    }
 }
