--- a/src/blocks/info/__application/_title/info__application_title.css
+++ b/src/blocks/info/__application/_title/info__application_title.css
@@ -7,3 +7,11 @@
     line-height: 50px; /* 100% */
     margin: 0 0 18px 0;
 }
+
+@media (max-width: 610px) {
+    .info__application_title {
+        font-size: 30px;
+        margin: 0 0 15px 0;
+        line-height: normal;
+    }
+}
