--- a/src/blocks/info/__application/info__application.css
+++ b/src/blocks/info/__application/info__application.css
@@ -1,3 +1,10 @@
 .info__application {
     background-color: #292D32;
+    box-sizing: border-box;
+}
+
+@media (max-width: 610px) {
+    .info__application {
+        padding: 60px 30px;
+    }
 }
