--- a/src/blocks/info/__contacts/_icon/info__contacts_icon.css
+++ b/src/blocks/info/__contacts/_icon/info__contacts_icon.css
@@ -2,3 +2,10 @@
     width: 38px;
     height: 38px;
 }
+
+@media (max-width: 610px) {
+    .info__contacts_icon {
+        width: 18.7px;
+        height: 18.7px;
+    }
+}
