--- a/src/blocks/info/__contacts/_name/info__contacts_name.css
+++ b/src/blocks/info/__contacts/_name/info__contacts_name.css
@@ -5,8 +5,16 @@
     font-style: normal;
     font-weight: 400;
     line-height: 133.687%; /* 24.064px */
-    margin: 0 0 8px 0;
+    margin: 0 0 0 8px;
     display: flex;
     align-items: center;
     margin-top: 8px;
+}
+
+
+@media (max-width: 610px) {
+    .info__contacts_name {
+        font-size: 15px;
+        margin: 0;    
+    }
 }
