--- a/src/blocks/info/__contacts/_subtitle/info__contacts_subtitle.css
+++ b/src/blocks/info/__contacts/_subtitle/info__contacts_subtitle.css
@@ -7,3 +7,10 @@
     line-height: 150%; /* 24px */
     margin: 0 0 48px 0;
 }
+
+@media (max-width: 610px) {
+    .info__contacts_subtitle {
+        font-size: 15px;
+        margin: 0 0 40px 0;
+    }
+}
