--- a/src/blocks/info/__contacts/_title/info__contacts_title.css
+++ b/src/blocks/info/__contacts/_title/info__contacts_title.css
@@ -7,3 +7,10 @@
     line-height: 50px; /* 100% */
     margin: 0 0 18px 0;
 }
+
+@media (max-width: 610px) {
+    .info__contacts_title {
+        font-size: 30px;
+        margin: 0 0 15px 0;
+    }
+}
