--- a/src/blocks/info/__contacts/info__contacts.css
+++ b/src/blocks/info/__contacts/info__contacts.css
@@ -2,9 +2,14 @@
     max-width: 700px;
     width: 100%;
     padding: 100px 165px 111.3px 103px;
-    border: 1px solid red;
     background-color: #F9F9F9;
     position: relative;
     z-index: 3;
     box-sizing: border-box;
+}
+
+@media (max-width: 610px) {
+    .info__contacts {
+        padding: 100px 63px 59.84px 30.49px;
+    }
 }
