--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -148,3 +148,8 @@
 @import url(../blocks/info/__iphone/info__iphone.css);
 @import url(../blocks/info/__iphone/_max/info__iphone_max.css);
 @import url(../blocks/info/__iphone/_mini/info__iphone_mini.css);
+
+@import url(../blocks/form/__item-error/form__item-error.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
+@import url(../blocks/form/__item-error/_active/form__item-error_active.css);
+@import url(../blocks/form/__button/_disabled/form__button_disabled.css);
