--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,6 +37,7 @@
 
 @import url(../blocks/search/search.css);
 @import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/__footer/logo__footer.css);
 
 
 /* FirstScreen */
@@ -153,3 +154,20 @@
 @import url(../blocks/form/__input-error/form__input-error.css);
 @import url(../blocks/form/__item-error/_active/form__item-error_active.css);
 @import url(../blocks/form/__button/_disabled/form__button_disabled.css);
+
+/* Footer */
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__up/footer__up.css);
+@import url(../blocks/footer/__nav/footer__nav.css);
+@import url(../blocks/footer/__item/footer__item.css);
+@import url(../blocks/footer/__item/_element/footer__item_element.css);
+@import url(../blocks/footer/__item/_link/footer__item_link.css);
+@import url(../blocks/footer/__item/_list/footer__item_list.css);
+@import url(../blocks/footer/__item/_title/footer__item_title.css);
+@import url(../blocks/footer/__line/footer__line.css);
+
+@import url(../blocks/footer/__down/footer__down.css);
+@import url(../blocks/footer/__down/_subtitle/footer__down_subtitle.css);
+@import url(../blocks/footer/__down/_title/footer__down_title.css);
+
