added mobile v for footer

--- a/src/blocks/footer/__down/_subtitle/footer__down_subtitle.css
+++ b/src/blocks/footer/__down/_subtitle/footer__down_subtitle.css
@@ -7,3 +7,10 @@
     line-height: 150%; /* 27px */
     margin: 0;
 }
+
+@media (max-width: 1460px) {
+    .footer__down_subtitle {
+        font-size: 15px;
+        margin: 0;
+    }
+}
