--- a/src/blocks/footer/__down/_title/footer__down_title.css
+++ b/src/blocks/footer/__down/_title/footer__down_title.css
@@ -7,3 +7,10 @@
     line-height: 133.687%;
     margin: 0 0 11px 0;
 }
+
+@media (max-width: 1460px) {
+    .footer__down_title {
+        font-size: 15px;
+        margin: 0;
+    }
+}
