--- a/src/blocks/footer/__down/footer__down.css
+++ b/src/blocks/footer/__down/footer__down.css
@@ -2,4 +2,15 @@
     display: flex;
     gap: 153px;
     padding-top: 40px;
+    box-sizing: border-box;
+    justify-content: center;
+}
+
+@media (max-width: 1460px) {
+    .footer__down {
+        flex-direction: column;
+        padding-top: 31px;
+        gap: 20px;
+        
+    }
 }
