--- a/src/blocks/footer/__item/_link/footer__item_link.css
+++ b/src/blocks/footer/__item/_link/footer__item_link.css
@@ -14,3 +14,9 @@
 .footer__item_link:hover {
     opacity: 0.7;
 }
+
+@media (max-width: 900px) {
+    .footer__item_link {
+        font-size: 15px;
+    }
+}
