--- a/src/blocks/footer/__line/footer__line.css
+++ b/src/blocks/footer/__line/footer__line.css
@@ -1,5 +1,7 @@
 .footer__line {
-    width: 1400px;
+    max-width: 1400px;
+    width: 100%;
     border: 1px solid #E5E5E5;
     background-color: #E5E5E5;
 }
+
