--- a/src/blocks/footer/__nav/footer__nav.css
+++ b/src/blocks/footer/__nav/footer__nav.css
@@ -4,3 +4,18 @@
     grid-auto-rows: 179px;
     column-gap: 180px;
 }
+
+@media (max-width: 1130px) {
+    .footer__nav {
+        column-gap: 50px;
+        row-gap: 30px;
+    }
+}
+
+@media (max-width: 900px) {
+    .footer__nav {
+        grid-template-columns: repeat(2, minmax(141px, 214px));
+        grid-auto-rows: 179px;
+        grid-auto-rows: auto;
+    }
+}
