--- a/src/blocks/footer/__up/footer__up.css
+++ b/src/blocks/footer/__up/footer__up.css
@@ -1,4 +1,18 @@
 .footer__up {
     display: flex;
     margin-bottom: 60px;
+    justify-content: center;
+}
+
+@media (max-width: 1460px) {
+    .footer__up {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 900px) {
+    .footer__up {
+        margin-bottom: 33px;
+    }
 }
