fixed margin btw blocks

--- a/src/blocks/advantages/advantages.css
+++ b/src/blocks/advantages/advantages.css
@@ -29,5 +29,6 @@
         overflow: hidden;
         background-position: top 373px left 14px;
         background-size: 335px 121px;
+        margin-bottom: 120px;
     }
 }
