--- a/src/blocks/catalog/catalog.css
+++ b/src/blocks/catalog/catalog.css
@@ -12,8 +12,15 @@
     .catalog {
         padding: 0 15px;
         grid-template-columns: repeat(auto-fit, minmax(345px, 1fr));
-        grid-template-rows: 238px repeat(5, 275px);
+        grid-template-rows: 233px 275px repeat(4, 290.9px);
         gap: 20.47px;
         margin-bottom: 120.1px;
     }
 }
+
+@media (max-width: 700px) {
+    .catalog:first-child {
+        gap: 10px;
+    }
+}
+
