--- a/src/blocks/firstscreen/__main/firstscreen__main.css
+++ b/src/blocks/firstscreen/__main/firstscreen__main.css
@@ -15,6 +15,6 @@
         height: 593px;
         background-size: 293px 77px;
         background-position: top 18px left 32px;
-        margin: 0 auto;
+        justify-content: center;
     }
 }
