--- a/src/blocks/firstscreen/__offer/firstscreen__offer.css
+++ b/src/blocks/firstscreen/__offer/firstscreen__offer.css
@@ -34,6 +34,7 @@
         max-width: 375px;
         width: 100%;
         height: 196px;
-        margin: 0 auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
